fix clippath

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -541,7 +541,7 @@ i {
     padding-top: 25px;
     background-image: radial-gradient(hsla(209, 100%, 47%, 1.00) 5%, transparent 0);
     background-size: 11px 11px;
-    clip-path: circle(170vh at 50% -60vh);
+    clip-path: circle(180vh at 50% -60vh);
 }
 
 #about .div-img-bg {
@@ -613,7 +613,6 @@ i {
     position: relative;
 }
 
-#skill .paddsection {}
 
 #skills .div-img-bg {
     margin-top: 0px;
@@ -719,7 +718,7 @@ i {
     padding-bottom: 230px;
     background-image: radial-gradient(hsla(209, 100%, 47%, 1.00) 5%, transparent 0);
     background-size: 11px 11px;
-    clip-path: circle(180vh at 50% -60vh);
+    clip-path: circle(200vh at 50% -20vh);
 }
 
 #portfolio #portfolio-flters {
